@@ -1,3 +1,13 @@
+2019-08-02  Carlos Garcia Campos  <cgarcia@igalia.com>
+
+        [SOUP] WebSockets: use SOUP_WEBSOCKET_CLOSE_NO_STATUS when closing with no status
+        https://bugs.webkit.org/show_bug.cgi?id=200338
+
+        Reviewed by Alex Christensen.
+
+        * NetworkProcess/soup/WebSocketTaskSoup.cpp:
+        (WebKit::WebSocketTask::close):
+
 2019-08-01  Alex Christensen  <achristensen@webkit.org>
 
         Do not send NetworkProcessProxy::LogTestingEvent message if we are not testing
