@@ -1,3 +1,15 @@
+2019-08-02  Carlos Garcia Campos  <cgarcia@igalia.com>
+
+        [SOUP] WebSockets: use SOUP_WEBSOCKET_CLOSE_NO_STATUS when closing with no status
+        https://bugs.webkit.org/show_bug.cgi?id=200338
+
+        Reviewed by Alex Christensen.
+
+        Remove failure expectation for http/tests/websocket/tests/hybi/client-close.html
+
+        * platform/gtk/TestExpectations:
+        * platform/wpe/TestExpectations:
+
 2019-08-01  Chris Dumez  <cdumez@apple.com>
 
         Pages using MessagePorts should be PageCacheable
